--- a/2_Advanced/20_seaborn_intro.ipynb
+++ b/2_Advanced/20_seaborn_intro.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\FAIZAN AKHTAR\\anaconda3\\envs\\pthon_data_project\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import ast\n",
     "import pandas as pd\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +207,7 @@
        "qlik            1  119550.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +339,7 @@
        "word            8   75033.75"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -682,23 +691,88 @@
        "</div>"
       ],
       "text/plain": [
-       "       job_title_short  ...                                    job_type_skills\n",
-       "18059     Data Analyst  ...  {'analyst_tools': ['excel', 'ms access'], 'pro...\n",
-       "18059     Data Analyst  ...  {'analyst_tools': ['excel', 'ms access'], 'pro...\n",
-       "18059     Data Analyst  ...  {'analyst_tools': ['excel', 'ms access'], 'pro...\n",
-       "19941     Data Analyst  ...  {'libraries': ['numpy', 'pandas'], 'programmin...\n",
-       "19941     Data Analyst  ...  {'libraries': ['numpy', 'pandas'], 'programmin...\n",
-       "...                ...  ...                                                ...\n",
-       "754319    Data Analyst  ...                       {'analyst_tools': ['excel']}\n",
-       "771454    Data Analyst  ...                   {'programming': ['python', 'r']}\n",
-       "771454    Data Analyst  ...                   {'programming': ['python', 'r']}\n",
-       "771915    Data Analyst  ...               {'analyst_tools': ['word', 'excel']}\n",
-       "771915    Data Analyst  ...               {'analyst_tools': ['word', 'excel']}\n",
+       "       job_title_short                                          job_title  \\\n",
+       "18059     Data Analyst                  Data Management Analyst - Avendra   \n",
+       "18059     Data Analyst                  Data Management Analyst - Avendra   \n",
+       "18059     Data Analyst                  Data Management Analyst - Avendra   \n",
+       "19941     Data Analyst  Session Lead (External Contractor) - Data Anal...   \n",
+       "19941     Data Analyst  Session Lead (External Contractor) - Data Anal...   \n",
+       "...                ...                                                ...   \n",
+       "754319    Data Analyst                        Finance Master Data Analyst   \n",
+       "771454    Data Analyst                                       Data Analyst   \n",
+       "771454    Data Analyst                                       Data Analyst   \n",
+       "771915    Data Analyst                              Provider Data Analyst   \n",
+       "771915    Data Analyst                              Provider Data Analyst   \n",
+       "\n",
+       "         job_location          job_via job_schedule_type  job_work_from_home  \\\n",
+       "18059   United States  via Ai-Jobs.net         Full-time               False   \n",
+       "18059   United States  via Ai-Jobs.net         Full-time               False   \n",
+       "18059   United States  via Ai-Jobs.net         Full-time               False   \n",
+       "19941   United States  via Ai-Jobs.net         Part-time               False   \n",
+       "19941   United States  via Ai-Jobs.net         Part-time               False   \n",
+       "...               ...              ...               ...                 ...   \n",
+       "754319  United States  via Ai-Jobs.net         Full-time               False   \n",
+       "771454  United States  via Ai-Jobs.net         Full-time               False   \n",
+       "771454  United States  via Ai-Jobs.net         Full-time               False   \n",
+       "771915  United States  via Ai-Jobs.net         Full-time               False   \n",
+       "771915  United States  via Ai-Jobs.net         Full-time               False   \n",
+       "\n",
+       "             search_location     job_posted_date  job_no_degree_mention  \\\n",
+       "18059   Texas, United States 2023-12-16 13:02:31                  False   \n",
+       "18059   Texas, United States 2023-12-16 13:02:31                  False   \n",
+       "18059   Texas, United States 2023-12-16 13:02:31                  False   \n",
+       "19941   Texas, United States 2023-07-25 13:04:46                   True   \n",
+       "19941   Texas, United States 2023-07-25 13:04:46                   True   \n",
+       "...                      ...                 ...                    ...   \n",
+       "754319                 Sudan 2023-12-21 20:53:32                  False   \n",
+       "771454                 Sudan 2023-06-21 02:00:05                  False   \n",
+       "771454                 Sudan 2023-06-21 02:00:05                  False   \n",
+       "771915                 Sudan 2023-11-17 01:40:02                  False   \n",
+       "771915                 Sudan 2023-11-17 01:40:02                  False   \n",
+       "\n",
+       "        job_health_insurance    job_country salary_rate  salary_year_avg  \\\n",
+       "18059                  False  United States        year          54000.0   \n",
+       "18059                  False  United States        year          54000.0   \n",
+       "18059                  False  United States        year          54000.0   \n",
+       "19941                  False  United States        year         100500.0   \n",
+       "19941                  False  United States        year         100500.0   \n",
+       "...                      ...            ...         ...              ...   \n",
+       "754319                 False          Sudan        year          89204.0   \n",
+       "771454                 False          Sudan        year         100500.0   \n",
+       "771454                 False          Sudan        year         100500.0   \n",
+       "771915                 False          Sudan        year          69900.0   \n",
+       "771915                 False          Sudan        year          69900.0   \n",
+       "\n",
+       "        salary_hour_avg                     company_name job_skills  \\\n",
+       "18059               NaN                          Aramark        sql   \n",
+       "18059               NaN                          Aramark      excel   \n",
+       "18059               NaN                          Aramark  ms access   \n",
+       "19941               NaN                    Udacity, Inc.     python   \n",
+       "19941               NaN                    Udacity, Inc.        sql   \n",
+       "...                 ...                              ...        ...   \n",
+       "754319              NaN                           Nestlé      excel   \n",
+       "771454              NaN                           Govini     python   \n",
+       "771454              NaN                           Govini          r   \n",
+       "771915              NaN  Health Care Service Corporation       word   \n",
+       "771915              NaN  Health Care Service Corporation      excel   \n",
+       "\n",
+       "                                          job_type_skills  \n",
+       "18059   {'analyst_tools': ['excel', 'ms access'], 'pro...  \n",
+       "18059   {'analyst_tools': ['excel', 'ms access'], 'pro...  \n",
+       "18059   {'analyst_tools': ['excel', 'ms access'], 'pro...  \n",
+       "19941   {'libraries': ['numpy', 'pandas'], 'programmin...  \n",
+       "19941   {'libraries': ['numpy', 'pandas'], 'programmin...  \n",
+       "...                                                   ...  \n",
+       "754319                       {'analyst_tools': ['excel']}  \n",
+       "771454                   {'programming': ['python', 'r']}  \n",
+       "771454                   {'programming': ['python', 'r']}  \n",
+       "771915               {'analyst_tools': ['word', 'excel']}  \n",
+       "771915               {'analyst_tools': ['word', 'excel']}  \n",
        "\n",
        "[170 rows x 17 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
